fix: center align speed slider with buttons

--- a/src/components/Lottery.scss
+++ b/src/components/Lottery.scss
@@ -13,8 +13,8 @@
   display: grid;
   grid-template-columns: 1fr max-content 1fr;
   gap: 8px;
-  align-items: center;
   justify-content: space-between;
+  padding-top: 8px;
 }
 
 .right-action-container {
